started home section

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,15 @@ header #menu
     display: none;
 }
 
+.home
+{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
 
 
 
