--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,40 @@ body
     background: #333;
 }
 
+section
+{
+    padding: 0 7%;
+}
+
+.btn
+{
+    padding: .6rem 3rem;
+    font-size: 2rem;
+    margin-top: 1rem;
+    cursor: pointer;
+    border: none;
+    border-radius: .5rem;
+    background: var(--gradient);
+    color: #fff;
+}
+
+.btn:hover
+{
+    background: #fff;
+    color: #333;
+}
+
+.heading
+{
+    text-align: center;
+    font-size: 3rem;
+    color: #fff;
+    padding: 1rem;
+    padding-top: 8.5rem;
+    width: 50rem;
+    margin: 0 auto;
+}
+
 header
 {
     width: 100%;
@@ -98,20 +132,223 @@ header #menu
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    background: url(../Images/home-background.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    padding-top: 9rem;
+}
+
+.home .image
+{
+    padding: 1rem;
+    flex: 1 1 40rem;
+    text-align: center;
+}
+
+.home .image img
+{
+    height: 70vh;
+    padding-top: 4rem;
+}
+
+.home .content
+{
+    padding: 1rem;
+    flex: 1 1 40rem;
+}
+
+.home .content h1
+{
+    font-size: 6rem;
+    color: #fff;
+}
+
+.home .content p
+{
+    font-size: 1.7rem;
+    color: #eee;
+    padding: 1rem 0;
+}
+
+.core
+{
+    min-height: 100vh;
+}
+
+.core .row
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.core .row .image
+{
+    text-align: center;
+    flex: 1 1 30rem;
+}
+
+.core .row .image img
+{
+    height: 65vh;
+    padding: 3rem 0;
+}
+
+.core .row .box-container
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex: 1 1 70rem;
+}
+
+.core .row .box-container .box
+{
+    margin: 2rem;
+    padding: 2rem;
+    width: 27rem;
+    box-shadow: 0 0 1rem rgba(0,0,0,.5);
+    background: #444;
+    border-radius: .5rem;
+}
+
+.core .row .box-container .box:hover
+{
+    background: var(--gradient);
+}
+
+.core .row .box-container .box:hover i
+{
+    color: #fff;
+}
+
+.core .row .box-container .box h3
+{
+    font-size: 2rem;
+    color: #fff;
+}
+
+.core .row .box-container .box h3 i
+{
+    color: #637CBB;
+    padding-right: .7rem;
+}
+
+.core .row .box-container .box p
+{
+    font-size: 1.3rem;
+    color: #eee;
+    padding: 1rem 0;
+}
+
+.about
+{
+    background: #222;
+}
+
+.about .row
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-top: 3rem;
+}
+
+.about .row .image
+{
+    flex: 1 1 45rem;
+    text-align: center;
+}
+
+.about .row .image img
+{
+    width: 85%;
+    border-radius: .5rem;
+}
+
+.about .row .content
+{
+    flex: 1 1 45rem;
+    padding: 2.5rem;    
+}
+
+.about .row .content h3
+{
+    font-size: 3.5rem;
+    color: #fff;
+}
+
+.about .row .content p
+{
+    font-size: 1.8rem;
+    color: #eee;
+    padding: 1rem 0;
+}
+
+.about .row .content p i
+{
+    padding-right: .5rem;
+    color: #637CBB;
+}
+
+.features
+{
+    min-height: 100vh;
+}
+
+.features .box-container
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.features .box-container .box
+{
+    text-align: center;
+    margin: 1.5rem;
+    padding: 1rem;
+    border: .2rem solid #fff;
+    width: 27rem;
+}
+
+.features .box-container .box:hover
+{
+    background: var(--gradient);
 }
 
 
+.features .box-container .box i
+{
+    height: 7rem;
+    width: 7rem;
+    line-height: 7rem;
+    text-align: center;
+    border-radius: 50%;
+    background: #fff;
+    color: #333;
+    font-size: 3rem;
+    margin: 1rem 0;
+}
 
+.features .box-container .box h3
+{
+    color: #fff;
+    font-size: 2.5rem;
+}
 
-
-
-
-
-
-
-
-
-
+.features .box-container .box p
+{
+    color: #eee;
+    font-size: 1.2rem;
+    padding: 1rem .5rem;
+}
+    
 
 
 
@@ -177,5 +414,37 @@ header #menu
     header .navbar.nav-toggle
     {
         top: 7.4rem;
+    }
+
+    .home .content h1
+    {
+        text-align: center;
+    }
+    .core .row .image
+    {
+        display: none;
+    }
+}
+
+@media (max-width:500px)
+{
+    html
+    {
+        font-size: 50%;
+    }
+
+    .home .content h1
+    {
+        font-size: 4rem;
+    }
+
+    .home .image img
+    {
+        height: auto;
+        width: 90%;
+    }
+    .heading
+    {
+        width: auto;
     }
 }
