--- a/css/styles.css
+++ b/css/styles.css
@@ -349,6 +349,69 @@ header #menu
     padding: 1rem .5rem;
 }
     
+.product
+{
+    min-height: 100vh;
+    background: #222;
+}
+
+.product .box-container
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.product .box-container .box
+{
+    margin: 1.5rem;
+    padding: 1rem;
+    width: 50rem;
+    background: #333;
+    box-shadow: 0 0 1rem rgba(0,0,0,.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.product .box-container .box .image
+{
+    padding: 1rem;
+}
+
+.product .box-container .box .image img
+{
+    padding: 0 3rem;
+    width: 20rem;
+    border-right: .1rem solid #ccc;
+}
+
+.product .box-container .box .content
+{
+    padding: 1rem;
+}
+
+.product .box-container .box .content h3
+{
+    font-size: 3rem;
+    color: #fff;
+}
+
+.product .box-container .box .content p
+{
+    font-size: 1.3rem;
+    color: #eee;
+    padding: 1rem 0;
+}
+
+.product .box-container .box .content .price
+{
+    font-size: 3rem;
+    color: #fff;
+}
+
+
 
 
 
@@ -420,6 +483,7 @@ header #menu
     {
         text-align: center;
     }
+
     .core .row .image
     {
         display: none;
@@ -443,8 +507,20 @@ header #menu
         height: auto;
         width: 90%;
     }
+    
     .heading
     {
         width: auto;
+    }
+
+    .product .box-container .box
+    {
+        flex-flow: column;
+    }
+
+    .product .box-container .box .image img
+    {
+        width: 85%;
+        border: none;
     }
 }
